# MobileManipulator

./: README.md
Turtlebot4/: location_menu.py
Turtlebot4/mob_pkg/: package.xml  setup.cfg  setup.py
Turtlebot4/mob_pkg/mob_pkg/: mob_controller.py  mob_menu.py  mqtt_hand.py
myCobot/manipulator/: package.xml  setup.py
myCobot/manipulator/manipulator/: bottle_detection.py  controller_cobot.py  grab_obj.py
myCobot/manipulator_bringup/: CMakeLists.txt  package.xml
myCobot/manipulator_bringup/launch/: grab_bottle.launch.py  spb.launch.py
myCobot/spb_pkg/: package.xml  setup.cfg  setup.py
myCobot/spb_pkg/spb_pkg/: botolServ.py  bottle_detection.py  bu_detection.py  bu_serv.py
